[package]
name = "mrt"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Mykhailo Chalyi <mike@chaliy.name>"]
description = "A task runner for polyglot monorepos"
repository = "https://github.com/chaliy/mrt"
homepage = "https://github.com/chaliy/mrt"
readme = "README.md"
keywords = ["monorepo", "task-runner", "cli", "polyglot"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[lib]
name = "mrt"
path = "src/mrt/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
console = "0.16"
glob = "0.3"
indicatif = "0.18"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.21", default-features = false, features = ["ansi"] }
toml = "1.1"
